crates/smart-config/tests/ui/derives/bogus_nested_config.stderr
error[E0277]: the trait bound `u64: VisitConfig` is not satisfied
 --> tests/ui/derives/bogus_nested_config.rs:3:10
  |
3 | #[derive(DescribeConfig)]
  |          ^^^^^^^^^^^^^^ the trait `VisitConfig` is not implemented for `u64`
  |
  = help: the following other types implement trait `VisitConfig`:
            OtherConfig
            TestConfig
  = note: required for the cast from `&u64` to `&dyn VisitConfig`
  = note: this error originates in the derive macro `DescribeConfig` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `u64: DescribeConfig` is not satisfied
 --> tests/ui/derives/bogus_nested_config.rs:6:12
  |
6 |     field: u64,
  |            ^^^ the trait `DescribeConfig` is not implemented for `u64`
  |
  = help: the following other types implement trait `DescribeConfig`:
            OtherConfig
            TestConfig

error[E0277]: the trait bound `u64: VisitConfig` is not satisfied
 --> tests/ui/derives/bogus_nested_config.rs:9:10
  |
9 | #[derive(DescribeConfig)]
  |          ^^^^^^^^^^^^^^ the trait `VisitConfig` is not implemented for `u64`
  |
  = help: the following other types implement trait `VisitConfig`:
            OtherConfig
            TestConfig
  = note: required for the cast from `&u64` to `&dyn VisitConfig`
  = note: this error originates in the derive macro `DescribeConfig` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `u64: DescribeConfig` is not satisfied
  --> tests/ui/derives/bogus_nested_config.rs:12:12
   |
12 |     field: u64,
   |            ^^^ the trait `DescribeConfig` is not implemented for `u64`
   |
   = help: the following other types implement trait `DescribeConfig`:
             OtherConfig
             TestConfig
